--- a/code/ES5_6_7/xiarui/3.变量结构赋值/对象/obj1.html
+++ b/code/ES5_6_7/xiarui/3.变量结构赋值/对象/obj1.html
@@ -63,6 +63,12 @@
  /* {x} = {x: 1};// 错误的写法*/
   ({err} = {err: 1}) // 正确的写法
 
+    log('由于数组本质是特殊的对象，因此可以对数组进行对象属性的解构');
+  let arr = [1,2,3];
+
+  let {num1,num2,num3} = arr;
+    log(num1,num2,num3);
+
 
 
 </script>
