--- a/code/ES5_6_7/prepare/es6/常用/11_Iterator遍历器.html
+++ b/code/ES5_6_7/prepare/es6/常用/11_Iterator遍历器.html
@@ -60,17 +60,17 @@
         console.log(Go.next());
 
 
-        // 原生测试  数组
+        // 原生测试  1.数组
         let arr3 = [1, 2, 'kobe', true];
         for(let i of arr3){
           console.log(i);
         }
-        // 字符串  string
+        // 3.字符串  string
         let str = 'abcdefg';
         for(let item of str){
           console.log(item);
         }
-        
+
 
       }
   </script>
