--- a/code/ES5_6_7/prepare/es6/其它/04_深度克隆.html
+++ b/code/ES5_6_7/prepare/es6/其它/04_深度克隆.html
@@ -18,7 +18,7 @@
     - 基本数据类型存放的就是实际的数据，可直接复制
       let number2 = 2;
       let number1 = number2;
-    - 克隆数据：对象/数组
+    - 克隆数据：2.对象/1.数组
       1、区别： 浅拷贝/深度拷贝
          判断： 拷贝是否产生了新的数据还是拷贝的是数据的引用
          知识点：对象数据存放的是对象在栈内存的引用，直接复制的是对象的引用
@@ -28,8 +28,8 @@
         1). arr.concat(): 数组浅拷贝
         2). arr.slice(): 数组浅拷贝
         3). JSON.parse(JSON.stringify(arr/obj)): 数组或对象深拷贝, 但不能处理函数数据
-        4). 浅拷贝包含函数数据的对象/数组
-        5). 深拷贝包含函数数据的对象/数组
+        4). 浅拷贝包含函数数据的对象/1.数组
+        5). 深拷贝包含函数数据的对象/1.数组
 -->
 <script type="text/javascript">
   // 复制的对象的方式
@@ -39,7 +39,7 @@
   console.log(obj1);
   obj1.sex.option1 = '不男不女'; // 修改复制的对象会影响原对象
   console.log(obj1, obj);
-  
+
   console.log('-----------');
   // Object.assign();  浅复制
   let obj2 = {};
@@ -87,8 +87,8 @@
     }
     return result;
   }
-  
-  
+
+
   let obj3 = {username: 'kobe',age: 39, sex: {option1: '男', option2: '女'}};
   let obj4 = deepClone(obj3);
   console.log(obj4);
@@ -96,6 +96,6 @@
   console.log(obj4, obj3);
 
 
-</script> 
+</script>
 </body>
 </html>
