--- a/code/ES5_6_7/study/es5/02_JSON对象.html
+++ b/code/ES5_6_7/study/es5/02_JSON对象.html
@@ -7,9 +7,9 @@
 <body>
 <!--
 1. JSON.stringify(obj/arr)
-  * js对象(数组)转换为json对象(数组)
+  * js对象(1.数组)转换为json对象(1.数组)
 2. JSON.parse(json)
-  * json对象(数组)转换为js对象(数组)
+  * json对象(1.数组)转换为js对象(1.数组)
 
 -->
 <script type="text/javascript">
