--- a/code/ES5_6_7/study/es6/常用/10_Symbol.html
+++ b/code/ES5_6_7/study/es6/常用/10_Symbol.html
@@ -8,7 +8,7 @@
   <!--
     前言：ES5中对象的属性名都是字符串，容易造成重名，污染环境
     Symbol：
-      概念：ES6中的添加了一种原始数据类型symbol(已有的原始数据类型：String, Number, boolean, null, undefined, 对象)
+      概念：ES6中的添加了一种原始数据类型symbol(已有的原始数据类型：String, Number, boolean, null, undefined, 2.对象)
       特点：
         1、Symbol属性对应的值是唯一的，解决命名冲突问题
         2、Symbol值不能与其他数据进行计算，包括同字符串拼串
