--- a/code/ES5_6_7/xiarui/3.变量结构赋值/2.对象/obj1.html
+++ b/code/ES5_6_7/xiarui/3.变量结构赋值/2.对象/obj1.html
@@ -13,12 +13,12 @@
 <script type="text/javascript">
 
   let log = (...filed) => {
-    const {log} = console;
+    const { log } = console
     log('\t', ...filed)
   }
 
   let warn = (...filed) => {
-    const {warn} = console;
+    const { warn } = console
     warn('\t', ...filed)
   }
 
@@ -28,8 +28,8 @@
   let { a, c, b } = { a: 'aaa', b: 'bbb' }
   log(a, b, c) // aaa bbb undefined
 
-    let {d:newD,e:newE} = {d:'ddd',e:'eee'}
-  log(newD,newE) // ddd eee
+  let { d: newD, e: newE } = { d: 'ddd', e: 'eee' }
+  log(newD, newE) // ddd eee
 
   warn('也就是说，对象的解构赋值的内部机制，是先找到同名属性，然后再赋给对应的变量。真正被赋值的是后者，而不是前者')
 
@@ -38,11 +38,10 @@
       'Hello',
       { y: 'World' }
     ]
-  };
+  }
 
-  let {p:[h,{y:w}]} = obj;
-  log(h,w)
-
+  let { p: [h, { y: w }] } = obj
+  log(h, w)
 
   const node = {
     loc: {
@@ -51,28 +50,26 @@
         column: 5
       }
     }
-  };
+  }
 
-  const {loc:loc1,loc:{start:{line:line1,column:column1}}} = node;
-  log('loc=',loc1,'line=',line1,'column=',column1)
-
+  const { loc: loc1, loc: { start: { line: line1, column: column1 } } } = node
+  log('loc=', loc1, 'line=', line1, 'column=', column1)
 
   console.log(' 2.注意点-----------------')
 
   let err;
- /* {x} = {x: 1};// 错误的写法*/
-  ({err} = {err: 1}) // 正确的写法
+  /* {x} = {x: 1};// 错误的写法*/
+  ({ err } = { err: 1 }) // 正确的写法
 
-    log('由于数组本质是特殊的对象，因此可以对数组进行对象属性的解构');
-  let arr = [1,2,3];
+  log('由于数组本质是特殊的对象，因此可以对数组进行对象属性的解构')
+  let arr = [1, 2, 3]
 
-  let {num1,num2,num3} = arr;
-    log(num1,num2,num3); // undefined
-    let {0: n1,1:n2} = arr;
-    log(n1,n2) // 1 2
-    let {0:first,[arr.length -1]:last} = arr;
-    log(first,last) // 1 3
-
+  let { num1, num2, num3 } = arr
+  log(num1, num2, num3) // undefined
+  let { 0: n1, 1: n2 } = arr
+  log(n1, n2) // 1 2
+  let { 0: first, [arr.length - 1]: last } = arr
+  log(first, last) // 1 3
 
 
 </script>
