--- a/code/ES5_6_7/xiarui/3.变量结构赋值/7.用途/use.html
+++ b/code/ES5_6_7/xiarui/3.变量结构赋值/7.用途/use.html
@@ -38,23 +38,25 @@
     }
   }
 
-  let {name,age} = f1();
-  log(name,age)
+  let { name, age } = f1()
+  log(name, age)
 
-    log('3.函数参数的定义')
-    function f2 ([x1,y1,z1]) {
-      return [x1+1,y1+2,z1+3]
-    }
-    let [x1,y1,z1] = f2([1,2,3])
-    log(x1,y1,z1)
+  log('3.函数参数的定义')
 
-    log('4.遍历map')
-    const map = new Map();
-  map.set('first','hello');
-  map.set('second','world')
-    for (let [key,value] of map){
-      log(key +' is '+ value)
-    }
+  function f2 ([x1, y1, z1]) {
+    return [x1 + 1, y1 + 2, z1 + 3]
+  }
+
+  let [x1, y1, z1] = f2([1, 2, 3])
+  log(x1, y1, z1)
+
+  log('4.遍历map')
+  const map = new Map()
+  map.set('first', 'hello')
+  map.set('second', 'world')
+  for (let [key, value] of map) {
+    log(key + ' is ' + value)
+  }
 
 </script>
 </body>
