add:7数值的扩展

--- a/code/ES5_6_7/xiarui/5.字符串中新增的方法/7.padStart,padEnd.html
+++ b/code/ES5_6_7/xiarui/5.字符串中新增的方法/7.padStart,padEnd.html
@@ -31,7 +31,7 @@ String
   log('他是如此的'.padEnd(10, '帅') + '!')
   log('不需要你加小尾巴'.padEnd(5, '加上小尾巴咯')) // 不需要你加小尾巴
 
-
+    log(''.padEnd(8,'*'))
 </script>
 </body>
 </html>
