update: 把javascript格式化了一下

--- a/code/ES5_6_7/xiarui/7.数值的扩展/6.Number.isSafeInteger.html
+++ b/code/ES5_6_7/xiarui/7.数值的扩展/6.Number.isSafeInteger.html
@@ -17,6 +17,11 @@ String
         log('\t', ...filed)
     }
 
+    log(Math.pow(2, 53)) //9007199254740992
+    log(Math.pow(2, 53) + 100) //9007199254740992
+
+    log(Math.pow(2, 53) === Math.pow(2, 53) + 1)  // true
+
 
 </script>
 </body>
