--- a/code/ES5_6_7/xiarui/2.let and const/let_const.html
+++ b/code/ES5_6_7/xiarui/2.let and const/let_const.html
@@ -12,55 +12,58 @@
 -->
 <script type="text/javascript">
 
-  // 1---------------
-  console.log('---------1----------')
-  {
-    var a = 1
-    let b = 10
-  }
-
-  console.log(a) // 1
-  // console.log(b) // erros: Uncaught ReferenceError: b is not defined
-  // 2-----------------
-  console.log('---------2----------')
-  for (let i = 0; i < 10; i++) {
-
-  }
-
-  console.log(i) //
-
-  console.log('--------------3---------------')
-  var a = []
-  for (var i = 0; i < 10; i++) {
-    a[i] = function () {
-      console.log(i)
+    // 1---------------
+    console.log('---------1----------')
+    {
+        var a = 1
+        let b = 10
     }
-  }
-  a[6]() // 10
 
-  let a1
-  console.log(typeof a1)
-  var a = 123
-  console.log(a)
+    console.log(a) // 1
+    // console.log(b) // erros: Uncaught ReferenceError: b is not defined
+    // 2-----------------
+    console.log('---------2----------')
+    for (let i = 0; i < 10; i++) {
 
-    console.log('------------------4---------------');
-  var tmp = new Date();
-
-  function f() {
-    console.log(tmp);
-    if (false) {
-      var tmp = 'hello world';
     }
-  }
 
-  f(); // undefined
+    console.log(i) //
+
+    console.log('--------------3---------------')
+    var a = []
+    for (var i = 0; i < 10; i++) {
+        a[i] = function () {
+            console.log(i)
+        }
+    }
+    a[6]() // 10
+
+    let a1
+    console.log(typeof a1)
+    var a = 123
+    console.log(a)
+
+    console.log('------------------4---------------')
+    var tmp = new Date()
+
+    function f () {
+        console.log(tmp)
+        if (false) {
+            var tmp = 'hello world'
+        }
+    }
+
+    f() // undefined
 
     console.log('------------5---------------')
-  {{{
-    let test = 'Hello';
-    {let test = 'Hello2'}
-  }}}
-
+    {
+        {
+            {
+                let test = 'Hello'
+                {let test = 'Hello2'}
+            }
+        }
+    }
 
 
 </script>
