add:新增7：数值 8：函数 9：数组的扩展

--- a/code/ES5_6_7/xiarui/3.变量结构赋值/5.函数参数解构(mark)/func1.html
+++ b/code/ES5_6_7/xiarui/3.变量结构赋值/5.函数参数解构(mark)/func1.html
@@ -43,6 +43,7 @@
     let { x1, y1 } = {}
     log(x1, y1, '因为传递{}，解构的x1，y1都是undefined，所以x=1，y=2')
     // fixme:不知道为什么
+    // 初步可以理解为：move({x=1,y=2})
     log(move()) // [1,2]
     log('解读上面的答案')
 
