--- a/code/ES5_6_7/xiarui/9.数组的扩展/2.Array.from.html
+++ b/code/ES5_6_7/xiarui/9.数组的扩展/2.Array.from.html
@@ -43,8 +43,19 @@
         length: 5
     }
 
-    let arr = Array.from(arrayLike);
+    let arr = Array.from(arrayLike)
     log(arr)
+
+    // 只要是部署了 Iterator 接口的数据结构，Array.from都能将其转为数组。
+    log(Array.from('hello'))
+    // fixme:学习set
+    log(new Set(['a', 'b']))
+    log(Array.from([1, 2, 3]))
+    log(Array.from({ length: 3 }))
+
+    // Array.from还可以接受第二个参数，作用类似于数组的map方法，用来对每个元素进行处理，将处理后的值放入返回的数组。
+    log(Array.from('1234', item => item * item))
+    log(Array.from({ length: 2 }, () => 'jack'))
 
 
 </script>
