--- a/code/ES5_6_7/xiarui/10.对象的扩展/6...对象的扩展运算符.html
+++ b/code/ES5_6_7/xiarui/10.对象的扩展/6...对象的扩展运算符.html
@@ -24,9 +24,50 @@
     let { y, x, ...z } = { x: 1, y: 2, a: 3, b: 4 }
     log(x, y, z) // 1,2,{a:3,b:4}
 
-    // 可以发现真的很智能
     let { x1, a1, ...z1 } = { x1: 1, y1: 2, a1: 3, b1: 4 }
     log(x1, a1, z1)// 1,3,{y1:2,b1:4}
+
+/*    let { ...l } = null; // 运行时错误
+    let { ...s } = undefined; // 运行时错误*/
+
+    let obj = {a:{b:1},c:2,d:'3'}
+    let {d,...h} = obj;
+    log(h)   //{a:{b:1},c:2}
+
+    // 扩展运算符
+    let c1 = {a1:3,b1:3}
+    console.log({...c1})
+
+    let c2 = {...['a','b','c']}
+    console.log(c2)  // {0:'a',1:'b',2:'c'}
+
+    console.log({...{}})  // {}
+    console.log({...null})  // {}
+    console.log({...undefined})  // {}
+    console.log({...true})  // {}
+
+    log({...'hello'})
+
+    // 改变属性的值
+    let obj2 = {
+        name:'张三',
+        age:200,
+        num:12,
+    }
+
+    let newObj2 = {
+        ...obj2,
+        age:12,
+    }
+    console.log(newObj2)
+
+
+
+
+
+
+
+
 
 
 </script>
