--- a/code/ES5_6_7/xiarui/test/1.数组测试.html
+++ b/code/ES5_6_7/xiarui/test/1.数组测试.html
@@ -11,8 +11,9 @@
 -->
 <script type="text/javascript">
 
-    let arr = [, , , 1, 2, ,]
-    console.log(arr)
+    let arr = []
+    console.log(arr.map(value => value+'k' ).join(","))
+
 
 </script>
 </body>
