--- a/code/ES5_6_7/xiarui/test/6.对象测试.html
+++ b/code/ES5_6_7/xiarui/test/6.对象测试.html
@@ -6,17 +6,14 @@
 </head>
 <body>
 <!--
-数组的测试
+1. 指数运算符(幂): **
+2. Array.prototype.includes(value) : 判断数组中是否包含指定value
 
 -->
 <script type="text/javascript">
 
-    let arr = []
-    console.log(arr.map(value => value+'k' ).join(","))
-
-    // test2
-    let str = 'abc'
-    console.log(str[0])
+    const obj = {name:'张三'}
+    console.log('name' in obj)  // true
 
 
 </script>
