--- a/code/ES5_6_7/xiarui/test/7.数组splice测试.html
+++ b/code/ES5_6_7/xiarui/test/7.数组splice测试.html
@@ -11,6 +11,12 @@
 -->
 <script type="text/javascript">
 
+    let arr = [0, 1, 2, 3, 4, 5]
+    const index = arr.findIndex(item => item === 7);
+    console.log(index)
+    arr.splice(-1,1,6);
+    console.log(arr)
+
 
 </script>
 </body>
