add:es6 18：generator函数（一半）

--- a/code/ES5_6_7/xiarui/test/1.数组测试.html
+++ b/code/ES5_6_7/xiarui/test/1.数组测试.html
@@ -11,6 +11,13 @@
 -->
 <script type="text/javascript">
 
+    let [prev, curr] = [0, 1];
+    for(let i = 1;i<=5;i++){
+        [prev, curr] = [curr, prev + curr];
+        console.log([prev,curr])
+    }
+
+
 
 </script>
 </body>
