--- a/code/ES5_6_7/xiarui/18.Generator/2.next方法的参数.html
+++ b/code/ES5_6_7/xiarui/18.Generator/2.next方法的参数.html
@@ -21,7 +21,45 @@ Generator函数
         log('\t', ...filed)
     }
 
+    //yield表达式本身没有返回值，或者说总是返回undefined。
+    // next方法可以带一个参数，该参数就会被当作上一个yield表达式的返回值。
 
+    function * f () {
+        for (let i = 0; true; i++) {
+            log('before', i)
+            let reset = yield i  // yield相当于存档点，到这里就卡住了
+            log('after', i)
+            if (reset) { i = -1 }
+        }
+    }
+
+    let g = f()
+
+    g.next() // { value: 0, done: false }   // before 0
+    g.next() // { value: 1, done: false }  // after 0  before 1
+    g.next(true) // { value: 0, done: false }  //after 1 before 0
+
+    // 例子二： yield默认返回undefined,如果下一个next给了值，就会把上一个yield返回的结果成那个值
+    function * foo (x) {
+        log('a')
+        let y = 2 * (yield (x + 1))
+        log('b')
+        let z = yield (y / 3)
+        log('c')
+        log(x, y, z)
+        return (x + y + z)
+    }
+
+    let a = foo(5)
+    log(a.next()) // a  {value:6,done: false}
+    log(a.next()) // b  {value:NaN,done:false}
+    log(a.next()) // c 5,NaN,NaN {value: NaN,done:true}  (x)
+    //   c 5,NaN,undefined {value: NaN,done:true} (√)
+
+    let b = foo(5)
+    log(b.next()) //  a  {value:6,done: false}
+    log(b.next(12)) //  b {value:8,done:false}
+    log(b.next(13)) // c 5 24 13 {value:42,done:true}
 
 
 </script>
