add:18:generator完结 19：异步应用（我觉得不重要，不学） 20：async(巨tm重要好吧)，学了一半

--- a/code/ES5_6_7/xiarui/18.Generator/7.yield 表达式.html
+++ b/code/ES5_6_7/xiarui/18.Generator/7.yield 表达式.html
@@ -123,4 +123,21 @@ Generator函数
 
     log([...getGen2(getGen1())])
 
+    // 李子柒： （没想到 谐音竟然是例子七）
+    function* iterTree(tree) {
+        if (Array.isArray(tree)) {
+            for(let i=0; i < tree.length; i++) {
+                yield* iterTree(tree[i]);
+            }
+        } else {
+            yield tree;
+        }
+    }
+
+    const tree = [ 'a', ['b', 'c'], ['d', 'e'] ];
+
+    for(let x of iterTree(tree)) {
+        console.log(x);
+    }
+
 </script>
