add:es6 20: sync(完结+练习)

--- a/code/ES5_6_7/xiarui/12.Symbol/4.消除魔术字符串.html
+++ b/code/ES5_6_7/xiarui/12.Symbol/4.消除魔术字符串.html
@@ -83,7 +83,7 @@ Symbol
         return area
     }
 
-    log(getArea2(shapeType.triangle, { width: 3, height: 4 })) // 魔术字符串
+    log(getArea2(shapeType3.triangle, { width: 3, height: 4 })) // 魔术字符串
 
 
 </script>
