--- a/code/ES5_6_7/xiarui/test/1.数组测试.html
+++ b/code/ES5_6_7/xiarui/test/1.数组测试.html
@@ -17,7 +17,20 @@
         console.log([prev,curr])
     }
 
+    const a = [10,20,30,40]
 
+    console.log( 3 in a)
+
+
+    /*
+      ○   ☆    △   ★   ←
+ 1    3    1    1   0   0
+ 2    2    2    0   1   0
+ 3    0    3    1   1   0
+ 4    2    0    0   1   2
+ 5    1    0    0   3   1
+ 6
+     */
 
 </script>
 </body>
